2018-11-08  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 43784: Completion/Zsh/Command/_compadd: clarify descriptions on
	options related to match sorting

	* unposted (c.f. Bart: 43739):
	Completion/Zsh/Context/_brace_parameter: use a correct
	description for the @ parameter expansion flag

2018-11-07  Peter Stephenson  <p.stephenson@samsung.com>

	* 43788: Doc/Zsh/mod_zpty.yo: make it clear -n option to
	zpty -w is irrelevant if no string argument.

2018-11-07  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 43761: Completion/BSD/Type/_file_flags,
	Completion/Unix/Command/_mktemp, Completion/Unix/Command/_script,
	Completion/Unix/Command/_strip, Completion/Unix/Type/_file_systems:
	add or update support for darwin

2018-11-05  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 43760: Doc/Makefile.in, Doc/Zsh/mod_nearcolor.yo,
	Doc/Zsh/zle.yo, NEWS: add documentation for true colour
	changes and nearcolor module

	* 43759: Src/Modules/nearcolor.c, Src/Zle/complist.c,
	Src/Zle/zle.h, Src/Zle/zle_refresh.c, Src/Zle/zle_tricky.c,
	Src/prompt.c, Src/zsh.h, Src/zsh_system.h: add support for
	true colour terminals

	* 43747: Src/Modules/nearcolor.c, Src/Modules/nearcolor.mdd,
	Src/init.c, Src/prompt.c, Src/zsh.h: new module to map
	colours from hex triplets to the nearest matching colour

2018-11-03  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 43752: Completion/Base/Completer/_expand: Fix quoting if
	globbing failed / was not tried for expression on command line.

2018-11-02  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 43748: Completion/Unix/Command/_ack: fix for ack 3beta

	* github #29: Wieland Hoffmann: Completion/Unix/Command/_git:
	Add completion support for Gits --color-moved option and
	color settings

2018-10-31  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 43746: Completion/Unix/Command/_ping: update for BSD and
	Darwin

	* 43744: Completion/Unix/Command/_sysctl: add support for
	procps-ng (Linux) and NetBSD, with several other updates
